2010-06-18  Chris Toshok  <toshok@ximian.com>

	* pal/gtk/pal-gtk.cpp (MoonWindowingSystemGtk::ShowConsentDialog):
	c&p a bunch of the pipeline-ui dialog code here.

	* pal/capture/pal-linux-capture.cpp (MoonCaptureServiceLinux::RequestSystemAccess):
	use the Consent class instead of using the pal directly.

	* moonlightconfiguration.h,cpp (MoonlightConfiguration): add
	HasKey method, and change return value of GetBooleanValue to bool.

	* consent.h, consent.cpp: new files containing methods for popping
	up the various consent dialogs moonlight will have (clipboard,
	fullscreen pinning, video capture, etc).

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp:
	* enums.h:
	* enums.cpp:
	* textbox.h:
	* printing.h:
	* uielement.h:
	* webbrowser.h:
	* inputscope.h:
	* deployment.h:
	* richtextbox.h:
	* textelement.h:
	* richtextbox.cpp:
	* notificationwindow.h: Update to SL4 final API.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* printing.h-disabled: Remove old file.

2010-06-17  Sebastien Pouliot  <sebastien@ximian.com>

	* pal/gtk/pal-gtk.cpp: Finally fix the possible "multiple-dialogs"
	for windowsless plugins

2010-06-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* pal/gtk/pal-gtk.cpp: Fix dialog (to show) when plugin is running
	windowless. However that does not fix the possible multiple-dialogs
	in that case (windowless)

2010-06-16  Chris Toshok  <toshok@ximian.com>

	* runtime.h (Surface): GetWindow needs a pinvoke.

	* pal/window.h (MoonWindow): GetClipboard needs a
	cbinding/pinvoke.

	* pal/gtk/clipboard-gtk.h,cpp: remove SetSelection override.

	* pal/pal.h (MoonClipboard): remove SetSelection, and add
	cbinding/pinvoke decorations for 3 of the methods.

2010-06-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* pal/gtk/pal-gtk.cpp: Fix previous commit to set 'parent' variable
	in MoonInstallerServiceGtk::Install as it is used later

2010-06-15  Sebastien Pouliot  <sebastien@ximian.com>
